# foccuz-generator

./: .env.example  .gitignore  .importlinter  Dockerfile  README.md  docker-compose.yml  pyproject.toml
config/: settings.py  urls.py
config/plans/: COPEC.yaml  GOCAR.yaml  GRUPO_K.yaml  GRUPO_VANGUARDIA.yaml  LEMONTECH.yaml  SCANIA.yaml
src/adapters/cli/: main.py
src/context/commissions/application/: __init__.py
src/context/commissions/application/commands/: __init__.py  process_all_tenants_command.py  process_all_tenants_handler.py  process_plan_commission_command.py  process_plan_commission_handler.py  process_tenant_commissions_command.py  process_tenant_commissions_handler.py
src/context/commissions/application/dto/: __init__.py  batch_execution_result.py  plan_execution_result.py  tenant_execution_result.py
src/context/commissions/application/queries/: __init__.py  get_active_tenants_handler.py  get_active_tenants_query.py  get_tenant_handler.py  get_tenant_query.py  list_tenant_plans_handler.py  list_tenant_plans_query.py
src/context/commissions/domain/: __init__.py
src/context/commissions/domain/aggregates/: __init__.py  plan.py  tenant.py
src/context/commissions/domain/events/: __init__.py  commission_calculated.py  commission_exported.py  plan_processing_failed.py
src/context/commissions/domain/exceptions/: __init__.py  data_source_error.py  export_error.py  invalid_plan_error.py  invalid_tenant_error.py  plan_not_executable_error.py
src/context/commissions/domain/ports/: __init__.py  exporter.py  merge_strategy_registry.py  processing_strategy.py  strategy_factory.py
src/context/commissions/domain/repositories/: __init__.py  data_repository.py  multi_source_data_repository.py  tenant_repository.py
src/context/shared/domain/: __init__.py  domain_event.py
src/context/shared/infrastructure/: __init__.py  retry.py
tests/integration/application/: test_commission_processing_flow.py
tests/mocks/: __init__.py
tests/mocks/commissions/exporters/: mock_exporter.py
tests/mocks/commissions/repositories/: mock_data_repository.py  mock_tenant_repository.py
tests/mothers/: __init__.py
tests/mothers/commissions/domain/: aggregates_mother.py  value_objects_mother.py
tests/mothers/commissions/infrastructure/: __init__.py  dataframe_mother.py  grupok_dataframe_mother.py  scania_dataframe_mother.py
(+287 files in other folders)
